Added Implementations in Test Units
*TestComputationAPI now takes in an actual implementation from ComputationImpl
*TestStorageComputeAPI now tests for mutliple factors such as valid data files, empty files, files with invalid integers, custom delimiters, no data destinations.
*TestUserComputeAPI now tests for multiple factors such as valid inputs, empty input data, null input data, submitted jobs with null results, submitted jobs with write failures.